<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.storedalbumlist.StoredAlbumListFragment">

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/stored_albums_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"/>

    <TextView
            android:id="@+id/initial_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_xlarge"
            android:layout_marginEnd="@dimen/spacing_xlarge"
            android:textAlignment="center"
            android:text="@string/no_albums_stored_yet"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.35"
            tools:visibility="visible"/>

    <ImageView
            android:id="@+id/search_imageView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="@dimen/spacing_large"
            android:src="@drawable/ic_search_24dp"
            android:tint="@color/primaryLightColor"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/initial_textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>