<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.artistsearch.ArtistSearchFragment">

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/artist_search_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"/>

    <include layout="@layout/loading_view"/>

    <include
            android:id="@+id/artist_search_error_view"
            layout="@layout/error_view"
            android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>