...
            android:layout_marginTop="@dimen/spacing_large"
            android:src="@drawable/ic_cloud_off_48dp"
            android:tint="@color/primaryLightColor"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/error_view_textView"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias="0.4"/>

    <TextView
            android:id="@+id/error_view_textView"
            android:layout_width="0dp"
...
